Fixed the appearance of horizontal scrolling.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
     * {
-      box-sizing: border-panel;
+      box-sizing: border-box;
       font-family: 'FontAwesome', 'Poppins', sans-serif;
+    }
+
+    body {
+      margin: 0;
     }
 
     .game-panel {
